# binapi

./: .clang-format  .gitignore  .gitmodules  .mcp.json  CLAUDE.md  CMakeLists.txt  Doxyfile  README.md  TODO.md  async-recorder.md  build.sh  run_recorder.sh  test.sh  verify.sh
.claude/: settings.json
examples/binapi/: CMakeLists.txt  main.cpp
examples/binapi/asynchronous/: main.cpp
examples/binapi/asynchronous-user_data/: main.cpp
examples/binapi/synchronous/: main.cpp
examples/binapi/synchronous-user_data/: main.cpp
examples/binapi/websockets/: main.cpp
examples/binapi2/fapi/: CMakeLists.txt  rest_account_information.cpp  rest_exchange_info.cpp  rest_new_order.cpp  rest_ping.cpp  rest_ping_async.cpp  stream_all_book_tickers.cpp  stream_all_market_mini_tickers.cpp  stream_all_market_tickers.cpp  stream_book_ticker.cpp  stream_continuous_contract_kline.cpp  stream_kline.cpp  stream_liquidation_order.cpp  stream_mark_price.cpp  stream_mini_ticker.cpp  stream_partial_book_depth.cpp  stream_ticker.cpp  user_stream_listen_key.cpp  websocket_api_account_status.cpp  websocket_api_session_logon.cpp  websocket_api_session_logon_async.cpp
examples/binapi2/fapi/async-demo/: CMakeLists.txt  main.cpp
examples/binapi2/fapi/async-demo-cli/: CMakeLists.txt  cmd_account.cpp  cmd_account.hpp  cmd_convert.cpp  cmd_convert.hpp  cmd_market_data.cpp  cmd_market_data.hpp  cmd_order_book.cpp  cmd_order_book.hpp  cmd_pipeline_order_book.cpp  cmd_pipeline_order_book.hpp  cmd_stream.cpp  cmd_stream.hpp  cmd_trade.cpp  cmd_trade.hpp  cmd_user_stream.cpp  cmd_user_stream.hpp  cmd_ws_api.cpp  cmd_ws_api.hpp  common.cpp  common.hpp  main.cpp
examples/binapi2/fapi/async-demo-ui/: CMakeLists.txt  app_state.hpp  main.cpp  worker.cpp  worker.hpp
examples/binapi2/fapi/async-demo-ui/book/: book_capture.hpp  trades_tape_capture.hpp
examples/binapi2/fapi/async-demo-ui/rest/: commands.cpp  commands.hpp  commands_account.cpp  commands_convert.cpp  commands_market_data.cpp  commands_trade.cpp
examples/binapi2/fapi/async-demo-ui/streams/: commands.cpp  commands.hpp  stream_capture.hpp  stream_capture_sink.hpp
examples/binapi2/fapi/async-demo-ui/util/: capture_sink.hpp  json_tree.hpp  request_capture.hpp  virtual_scroll.hpp  wrap_text.hpp
examples/binapi2/fapi/async-demo-ui/views/: orderbook_view.cpp  response_pane.hpp  rest_view.cpp  status_bar.cpp  streams_view.cpp  views.hpp  ws_view.cpp
examples/binapi2/fapi/async-demo-ui/ws/: commands.cpp  commands.hpp
examples/binapi2/fapi/async-recorder/: CMakeLists.txt  README.md  aggregates.hpp  config.cpp  config.hpp  detail.cpp  detail.hpp  main.cpp  rest_sync.cpp  rest_sync.hpp  screener.cpp  screener.hpp  selector.cpp  selector.hpp  selector.yaml  selector_run.cpp  selector_test.cpp  status_reporter.cpp  status_reporter.hpp
examples/binapi2/fapi/async-recorder/detail/: drain.cpp  drain.hpp  helpers.cpp  helpers.hpp  run.cpp  snapshot.cpp  snapshot.hpp  subs.cpp  subs.hpp  types.hpp
examples/binapi2/fapi/demo/: CMakeLists.txt  async_main.cpp  commands.cpp  commands.hpp  sync_main.cpp
examples/binapi2/fapi/demo-cli/: CMakeLists.txt  cmd_account.cpp  cmd_account.hpp  cmd_market_data.cpp  cmd_market_data.hpp  cmd_order_book.cpp  cmd_order_book.hpp  cmd_stream.cpp  cmd_stream.hpp  cmd_trade.cpp  cmd_trade.hpp  cmd_user_stream.cpp  cmd_user_stream.hpp  cmd_ws_api.cpp  cmd_ws_api.hpp  common.cpp  common.hpp  main.cpp
examples/binapi2/fapi/sync-demo/: CMakeLists.txt  examples.hpp  main.cpp  rest_blocking.cpp  rest_callback.cpp  rest_future.cpp  stream_blocking.cpp  stream_callback.cpp  ws_api_blocking.cpp  ws_api_callback.cpp  ws_api_future.cpp
examples/binapi2/umf/: CMakeLists.txt  rest_account_information.cpp  rest_exchange_info.cpp  rest_new_order.cpp  rest_ping.cpp  rest_ping_async.cpp  stream_book_ticker.cpp  stream_mark_price.cpp  user_stream_listen_key.cpp  websocket_api_account_status.cpp  websocket_api_session_logon.cpp  websocket_api_session_logon_async.cpp
libs/binapi2_demo_commands/: CMakeLists.txt
libs/secret_provider/: CMakeLists.txt
libs/secret_provider/include/secret_provider/: dir_provider.hpp  env_provider.hpp  factory.hpp  libsecret_provider.hpp  secret_provider.hpp  systemd_creds_provider.hpp  test_provider.hpp
libs/secret_provider/src/: dir_provider.cpp  factory.cpp  libsecret_provider.cpp  systemd_creds_provider.cpp
libs/secret_provider/tests/: CMakeLists.txt  dir_provider_test.cpp  factory_test.cpp  secret_provider_test.cpp
src/binapi/: CMakeLists.txt  api.cpp  enums.cpp  errors.cpp  pairslist.cpp  reports.cpp  tools.cpp  types.cpp  websocket.cpp
src/binapi2/fapi/: CMakeLists.txt  client.cpp  decimal.cpp  signing.cpp
src/binapi2/fapi/order_book/: local_order_book.cpp  pipeline_order_book.cpp
src/binapi2/fapi/rest/: account.cpp  client.cpp  common.cpp  common.hpp  convert.cpp  market_data.cpp  pipeline.cpp  trade.cpp  user_data_streams.cpp
src/binapi2/fapi/streams/: local_order_book.cpp  market_stream.cpp  market_streams.cpp  stream_connection.cpp  user_stream.cpp  user_streams.cpp
src/binapi2/fapi/transport/: http_client.cpp  ssl_context.cpp  websocket_client.cpp
src/binapi2/fapi/websocket_api/: client.cpp
src/binapi2/umf/: CMakeLists.txt  client.cpp  rest.cpp  signing.cpp
src/binapi2/umf/rest/: account.cpp  common.cpp  common.hpp  market_data.cpp  trade.cpp  user_data_streams.cpp
src/binapi2/umf/streams/: market_streams.cpp  user_streams.cpp
src/binapi2/umf/transport/: http_client.cpp  ssl_context.cpp  websocket_client.cpp
src/binapi2/umf/websocket_api/: client.cpp
tests/binapi2/fapi/: CMakeLists.txt  decimal_test.cpp  enum_set_test.cpp  enums_test.cpp  io_thread_test.cpp  json_query_test.cpp  postman_validation_test.cpp  response_parse_test.cpp  result_test.cpp  rotating_file_sink_test.cpp  signing_test.cpp  stream_buffer_test.cpp  stream_consumer_test.cpp  stream_recorder_test.cpp  stream_test.cpp
tests/binapi2/fapi/benchmarks/: CMakeLists.txt  replay_transport.hpp  rest_benchmark.cpp  stream_buffer_benchmark.cpp  stream_parse_benchmark.cpp  stream_recorder_benchmark.cpp
(+768 files in other folders)
