add_executable(binapi2_fapi_rest_ping rest_ping.cpp)
target_link_libraries(binapi2_fapi_rest_ping PRIVATE binapi2_fapi)

add_executable(binapi2_fapi_rest_exchange_info rest_exchange_info.cpp)
target_link_libraries(binapi2_fapi_rest_exchange_info PRIVATE binapi2_fapi)

add_executable(binapi2_fapi_rest_new_order rest_new_order.cpp)
target_link_libraries(binapi2_fapi_rest_new_order PRIVATE binapi2_fapi)

add_executable(binapi2_fapi_websocket_api_session_logon websocket_api_session_logon.cpp)
target_link_libraries(binapi2_fapi_websocket_api_session_logon PRIVATE binapi2_fapi)

add_executable(binapi2_fapi_stream_book_ticker stream_book_ticker.cpp)
target_link_libraries(binapi2_fapi_stream_book_ticker PRIVATE binapi2_fapi)

add_executable(binapi2_fapi_user_stream_listen_key user_stream_listen_key.cpp)
target_link_libraries(binapi2_fapi_user_stream_listen_key PRIVATE binapi2_fapi)

add_executable(binapi2_fapi_rest_account_information rest_account_information.cpp)
target_link_libraries(binapi2_fapi_rest_account_information PRIVATE binapi2_fapi)

add_executable(binapi2_fapi_websocket_api_account_status websocket_api_account_status.cpp)
target_link_libraries(binapi2_fapi_websocket_api_account_status PRIVATE binapi2_fapi)

add_executable(binapi2_fapi_stream_mark_price stream_mark_price.cpp)
target_link_libraries(binapi2_fapi_stream_mark_price PRIVATE binapi2_fapi)

add_executable(binapi2_fapi_stream_mini_ticker stream_mini_ticker.cpp)
target_link_libraries(binapi2_fapi_stream_mini_ticker PRIVATE binapi2_fapi)

add_executable(binapi2_fapi_stream_ticker stream_ticker.cpp)
target_link_libraries(binapi2_fapi_stream_ticker PRIVATE binapi2_fapi)

add_executable(binapi2_fapi_stream_kline stream_kline.cpp)
target_link_libraries(binapi2_fapi_stream_kline PRIVATE binapi2_fapi)
