add_executable(binapi2_umf_rest_ping rest_ping.cpp)
target_link_libraries(binapi2_umf_rest_ping PRIVATE binapi2_umf)

add_executable(binapi2_umf_rest_exchange_info rest_exchange_info.cpp)
target_link_libraries(binapi2_umf_rest_exchange_info PRIVATE binapi2_umf)

add_executable(binapi2_umf_rest_new_order rest_new_order.cpp)
target_link_libraries(binapi2_umf_rest_new_order PRIVATE binapi2_umf)

add_executable(binapi2_umf_websocket_api_session_logon websocket_api_session_logon.cpp)
target_link_libraries(binapi2_umf_websocket_api_session_logon PRIVATE binapi2_umf)

add_executable(binapi2_umf_stream_book_ticker stream_book_ticker.cpp)
target_link_libraries(binapi2_umf_stream_book_ticker PRIVATE binapi2_umf)

add_executable(binapi2_umf_user_stream_listen_key user_stream_listen_key.cpp)
target_link_libraries(binapi2_umf_user_stream_listen_key PRIVATE binapi2_umf)

add_executable(binapi2_umf_rest_account_information rest_account_information.cpp)
target_link_libraries(binapi2_umf_rest_account_information PRIVATE binapi2_umf)

add_executable(binapi2_umf_websocket_api_account_status websocket_api_account_status.cpp)
target_link_libraries(binapi2_umf_websocket_api_account_status PRIVATE binapi2_umf)

add_executable(binapi2_umf_stream_mark_price stream_mark_price.cpp)
target_link_libraries(binapi2_umf_stream_mark_price PRIVATE binapi2_umf)
